V1 Random neural network
ca va bient jusq'au bout